--- a/sub_starbucks.html
+++ b/sub_starbucks.html
@@ -254,7 +254,7 @@
         </ul>
         <img src="images/media_starbucks.png" alt="Starbucks mediaquery" class="back-to-position to-right delay-0" />
         <!-- 바로가기 버튼 -->
-        <ul class="go back-to-position to-left delay-1">
+        <ul class="go back-to-position to-left delay-3">
           <li class="gosite floating"><a target="_blank" href="https://wonderful-morse-63f91e.netlify.app/">View Website</a></li>
         </ul>
       </div>
@@ -263,15 +263,15 @@
     <!-- GUIDE SECTION -->
     <section id="guide" class="scroll-spy">
       <div class="contentswrap">
-        <h3 class="back-to-position to-right delay-3">STYLE GUIDE</h3>
+        <h3 class="back-to-position to-right delay-2">STYLE GUIDE</h3>
         <ul>
-          <li class="back-to-position to-right delay-2">
-            <h3>TYPOGRAPHY</h3>
-            <img src="images/typography_starbucks.png" alt="Starbucks typography" />
+          <li>
+            <h3 class="back-to-position to-right delay-3">TYPOGRAPHY</h3>
+            <img src="images/typography_starbucks.png" alt="Starbucks typography" class="back-to-position to-right delay-4" />
           </li>
-          <li class="back-to-position to-left delay-3">
-            <h3>COLOR</h3>
-            <img src="images/color_starbucks.png" alt="Starbucks color" />
+          <li>
+            <h3 class="back-to-position to-left delay-3">COLOR</h3>
+            <img src="images/color_starbucks.png" alt="Starbucks color"  class="back-to-position to-left delay-4" />
           </li>
         </ul>
       </div>
