--- a/sub_twosome.html
+++ b/sub_twosome.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
   <meta name="format-detection" content="telephone=no" />
   <title>Twosome Coffee</title>
   
@@ -32,9 +32,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollToPlugin.min.js" integrity="sha512-eI+25yMAnyrpomQoYCqvHBmY4dLfqKWPnD4j8y0E3Js+yqpF26xncL4t81M1zxC+ISYfRoCN52rN/n0q2UIBZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+  <!-- ScrollMagic -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <link rel="stylesheet" href="css/sub_layout.css" />
+  <script defer src="./js/sub_main.js"></script>
   <script src="js/jquery-3.5.0.min.js"></script>
-  <script defer src="./js/main.js"></script>
 </head>
 
 <body id="twosome_body">
@@ -72,11 +75,6 @@
           <li><a href="sub_overwatch.html">OVERWATCH HERO</a></li>
         </ul>
       </li>
-      <!-- <li>
-        <h3>
-          <button onclick="location.href='index.html'">ABOUT ME</button>
-        </h3>
-      </li> -->
       <li>
         <h3>
           ART WORKS
@@ -89,11 +87,6 @@
           <li><a href="javascript:void(0)">DIGITAL DRAWING</a></li>
         </ul>
       </li>
-      <!-- <li>
-        <h3>
-          <button onclick="contact()">CONTACT</button>
-        </h3>
-      </li> -->
     </ul>
     <!-- 닫기영역 -->
     <label class="btn_close" for="toggle"></label>
@@ -228,67 +221,67 @@
   <!-- [s]CONTENTS -->
   <div id ="section_wrap">
     <!-- INTRO SECTION -->
-    <section id="intro">
+    <section id="intro" class="scroll-spy">
       <div class="contentswrap">
-        <h2>투썸플레이스 커피 모바일앱 제작</h2>
+        <h2 class="back-to-position to-bottom delay-0">투썸플레이스 커피 모바일앱 제작</h2>
         <ul class="summary">
-          <li>
+          <li class="back-to-position to-bottom delay-1">
             <h3>WORK</h3>
             <p>웹사이트 제작</p>
           </li>
-          <li>
+          <li class="back-to-position to-bottom delay-2">
             <h3>RELEASE DATE</h3>
             <p>2022&#46; 01&#46; 29</p>
           </li>
-          <li>
+          <li class="back-to-position to-bottom delay-3">
             <h3>TYPE</h3>
             <p>MOBILE APP</p>
           </li>
         </ul>
-        <h3>OVERVIEW</h3>
-        <p>
+        <h3 class="back-to-position to-bottom delay-4">OVERVIEW</h3>
+        <p class="back-to-position to-bottom delay-5">
           투썸플레이스 커피 모바일 앱 페이지를 제작했다. 토글메뉴를 Javascript를 통해 드롭다운 메뉴로 제작했고, 앱의 메인페이지와 브랜드스토리 메뉴의 서브페이지를 작업했다.
         </p>
       </div>
     </section>
   
     <!-- MEDIA SECTION -->
-    <section id="media">
+    <section id="media" class="scroll-spy">
       <div class="contentswrap">
-        <h3>MEDIA QUERY</h3>
-        <ul class="media_query">
+        <h3 class="back-to-position to-right delay-1">MEDIA QUERY</h3>
+        <ul class="media_query back-to-position to-left delay-1">
           <li>Mobile &#58; max 767px</li>
         </ul>
-        <img src="images/media_twosome.png" alt="Twosome mediaquery" />
+        <img src="images/media_twosome.png" alt="Twosome mediaquery" class="back-to-position to-right delay-0" />
         <!-- 바로가기 버튼 -->
-        <ul class="go">
-          <li class="gosite"><a target="_blank" href="https://reverent-hermann-fd8089.netlify.app/">View Mobile App</a></li>
+        <ul class="go back-to-position to-left delay-3">
+          <li class="gosite floating"><a target="_blank" href="https://reverent-hermann-fd8089.netlify.app/">View Mobile App</a></li>
         </ul>
       </div>
     </section>
     
     <!-- GUIDE SECTION -->
-    <section id="guide">
+    <section id="guide" class="scroll-spy">
       <div class="contentswrap">
-        <h3>STYLE GUIDE</h3>
+        <h3 class="back-to-position to-right delay-2">STYLE GUIDE</h3>
         <ul>
           <li>
-            <h3>TYPOGRAPHY</h3>
-            <img src="images/typography_twosome.png" alt="Twosome typography" />
+            <h3 class="back-to-position to-right delay-3">TYPOGRAPHY</h3>
+            <img src="images/typography_twosome.png" alt="Twosome typography" class="back-to-position to-right delay-4" />
           </li>
           <li>
-            <h3>COLOR</h3>
-            <img src="images/color_twosome.png" alt="Twosome color" />
+            <h3 class="back-to-position to-left delay-3">COLOR</h3>
+            <img src="images/color_twosome.png" alt="Twosome color" class="back-to-position to-left delay-4" />
           </li>
         </ul>
       </div>
     </section>
     
     <!-- DETAIL SECTION -->
-    <section id="detail">
+    <section id="detail" class="scroll-spy">
       <div class="contentswrap">
-        <img class="mobiledetail bg_normal" src="images/mobiledetail_twosome.png" alt="Twosome overview" />
-        <img class="mobiledetail bg_mobile" src="images/mobiledetail_twosome_m.png" alt="Twosome overview" />
+        <img class="mobiledetail bg_normal back-to-position to-bottom delay-6" src="images/mobiledetail_twosome.png" alt="Twosome overview" />
+        <img class="mobiledetail bg_mobile back-to-position to-bottom delay-6" src="images/mobiledetail_twosome_m.png" alt="Twosome overview" />
       </div>
     </section>
   </div>
