--- a/sub_uriage.html
+++ b/sub_uriage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
   <meta name="format-detection" content="telephone=no" />
   <title>Uriage</title>
   
@@ -32,9 +32,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollToPlugin.min.js" integrity="sha512-eI+25yMAnyrpomQoYCqvHBmY4dLfqKWPnD4j8y0E3Js+yqpF26xncL4t81M1zxC+ISYfRoCN52rN/n0q2UIBZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+  <!-- ScrollMagic -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <link rel="stylesheet" href="css/sub_layout.css" />
+  <script defer src="./js/sub_main.js"></script>
   <script src="js/jquery-3.5.0.min.js"></script>
-  <script defer src="./js/main.js"></script>
 </head>
 
 <body id="uriage_body">
@@ -72,11 +75,6 @@
           <li><a href="sub_overwatch.html">OVERWATCH HERO</a></li>
         </ul>
       </li>
-      <!-- <li>
-        <h3>
-          <button onclick="location.href='index.html'">ABOUT ME</button>
-        </h3>
-      </li> -->
       <li>
         <h3>
           ART WORKS
@@ -89,11 +87,6 @@
           <li><a href="javascript:void(0)">DIGITAL DRAWING</a></li>
         </ul>
       </li>
-      <!-- <li>
-        <h3>
-          <button onclick="contact()">CONTACT</button>
-        </h3>
-      </li> -->
     </ul>
     <!-- 닫기영역 -->
     <label class="btn_close" for="toggle"></label>
@@ -228,69 +221,69 @@
   <!-- [s]CONTENTS -->
   <div id ="section_wrap">
     <!-- INTRO SECTION -->
-    <section id="intro">
+    <section id="intro" class="scroll-spy">
       <div class="contentswrap">
-        <h2 class=>유리아쥬 반응형 웹사이트 제작</h2>
+        <h2 class="back-to-position to-bottom delay-0">유리아쥬 반응형 웹사이트 제작</h2>
         <ul class="summary">
-          <li>
+          <li class="back-to-position to-bottom delay-1">
             <h3>WORK</h3>
             <p>UIUX 디자인 및 제작</p>
           </li>
-          <li>
+          <li class="back-to-position to-bottom delay-2">
             <h3>RELEASE DATE</h3>
             <p>2022&#46; 02&#46; 06</p>
           </li>
-          <li>
+          <li class="back-to-position to-bottom delay-3">
             <h3>TYPE</h3>
             <p>RESPONSIVE WEB</p>
           </li>
         </ul>
-        <h3>OVERVIEW</h3>
-        <p>
+        <h3 class="back-to-position to-bottom delay-4">OVERVIEW</h3>
+        <p class="back-to-position to-bottom delay-5">
           프랑스 알프스 산맥에 위치한 유리아쥬 마을의 천연 온천수를 이용해 제품을 생산하는 유리아쥬는 맑고 진정성 있는 브랜드 아이덴티티를 갖고 있는 브랜드이다. 좋은 브랜드 스토리를 갖고 있음에도 홍보가 잘 되지 않는 면이 아쉬웠다. 이번에 진행한 유리아쥬 리디자인을 통해 유리아쥬 브랜드 스토리에 집중해 사용자의 흥미를 유발하도록 했고, 기존 웹사이트의 좁은 배너 영역과 단조로운 레이아웃을 개선해 브랜드 이미지가 더욱 돋보이도록 반응형 웹으로 작업했다.
         </p>
       </div>
     </section>
   
     <!-- MEDIA SECTION -->
-    <section id="media">
+    <section id="media" class="scroll-spy">
       <div class="contentswrap">
-        <h3>MEDIA QUERY</h3>
-        <ul class="media_query">
+        <h3 class="back-to-position to-right delay-1">MEDIA QUERY</h3>
+        <ul class="media_query back-to-position to-left delay-1">
           <li>PC &#58; 1920px &#45; 1400px</li>
           <li>Tablet &#58; 1399px &#45; 768px</li>
           <li>Mobile &#58; max 767px</li>
         </ul>
-        <img src="images/media_uriage.png" alt="유리아쥬 미디어쿼리/" />
+        <img src="images/media_uriage.png" alt="uriage mediaquery" class="back-to-position to-right delay-0" />
         <!-- 바로가기 버튼 -->
-        <ul class="go">
-          <li class="gosite"><a target="_blank" href="https://focused-feynman-42ddb9.netlify.app/">View Website</a></li>
+        <ul class="go back-to-position to-left delay-3">
+          <li class="gosite floating"><a target="_blank" href="https://focused-feynman-42ddb9.netlify.app/">View Website</a></li>
         </ul>
       </div>
     </section>
     
     <!-- GUIDE SECTION -->
-    <section id="guide">
+    <section id="guide" class="scroll-spy">
       <div class="contentswrap">
-        <h3>STYLE GUIDE</h3>
+        <h3 class="back-to-position to-right delay-2">STYLE GUIDE</h3>
         <ul>
           <li>
-            <h3>TYPOGRAPHY</h3>
-            <img src="images/typography_uriage.png" alt="Uriage typography" />
+            <h3 class="back-to-position to-right delay-3">TYPOGRAPHY</h3>
+            <img src="images/typography_uriage.png" alt="Uriage typography" class="back-to-position to-right delay-4" />
           </li>
           <li>
-            <h3>COLOR</h3>
-            <img src="images/color_uriage.png" alt="Uriage color" />
+            <h3 class="back-to-position to-left delay-3">COLOR</h3>
+            <img src="images/color_uriage.png" alt="Uriage color" class="back-to-position to-left delay-4" />
           </li>
         </ul>
-        <h3>PAGE DESIGN</h3>
+        <h3 class="back-to-position to-right delay-5">PAGE DESIGN</h3>
         <dl>
-          <dt>Goal</dt>
-          <dd>
+          <dt class="back-to-position to-right delay-6">Goal</dt>
+          <dd class="back-to-position to-right delay-7">
             배너의 길이를 확장해  기존의 홈페이지 보다 사용자들이 브랜드 상품 이미지에 집중할 수 있도록 하고, 브랜드 스토리를 메인페이지에 추가해 사용자들이 브랜드의 유래와 상품을 쉽게 접근할 수 있도록 한다.
           </dd>
-          <dt>Concept</dt>
-          <dd>
+          <dt class="back-to-position to-right delay-8">Concept</dt>
+          <dd class="back-to-position to-right delay-9">
             브랜드 대표 색상을 활용한 수채화 효과를 헤더와 메인페이지에 삽입해 순수하고 맑은 온천수의 이미지를 그래픽화 한다. 브랜드 스토리는 치유 효과가 있는 프랑스 온천수의 이미지를 강조하기 위해 물속에 있는 듯한 효과를 주어 고객들의 시선을 끌도록 한다.
           </dd>
         </dl>
@@ -298,11 +291,11 @@
     </section>
     
     <!-- DETAIL SECTION -->
-    <section id="detail">
+    <section id="detail" class="scroll-spy">
       <div class="contentswrap">
-        <img class="pcdeail" src="images/pcdetail_uriage.png" alt="uriage overview" />
-        <img class="mobiledetail bg_normal" src="images/mobiledetail_uriage.png" alt="uriage overview" />
-        <img class="mobiledetail bg_mobile" src="images/mobiledetail_uriage_m.png" alt="uriage overview" />
+        <img class="pcdeail back-to-position to-bottom delay-4" src="images/pcdetail_uriage.png" alt="uriage overview" />
+        <img class="mobiledetail bg_normal back-to-position to-bottom delay-9" src="images/mobiledetail_uriage.png" alt="uriage overview" />
+        <img class="mobiledetail bg_mobile back-to-position to-bottom delay-4" src="images/mobiledetail_uriage_m.png" alt="uriage overview" />
       </div>
     </section>
   </div>
