Fix Responsive mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Jisun's Portfolio" />
   <meta property="og:description" content="안녕하세요. 감각적인 디자이너 김지선입니다." />
   <meta property="og:image" content="./images/portfolio_seo.jpg" />
-  <meta property="og:url" content="#" />
+  <meta property="og:url" content="https://infallible-heisenberg-75d4ab.netlify.app/" />
 
   <!-- 트위터 카드(Twitter Cards) -->
   <meta property="twitter:card" content="summary" />
@@ -21,7 +21,7 @@
   <meta property="twitter:title" content="Jisun's Portfolio" />
   <meta property="twitter:description" content="안녕하세요. 감각적인 디자이너 김지선입니다." />
   <meta property="twitter:image" content="./images/portfolio_seo.jpg" />
-  <meta property="twitter:url" content="#" />
+  <meta property="twitter:url" content="https://infallible-heisenberg-75d4ab.netlify.app/" />
 
   <link rel="icon" href="./favicon.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -137,6 +137,7 @@
       </ul>
       <!-- 닫기영역 -->
       <label class="btn_close" for="toggle"></label>
+      <label class="btn_close bg_close" for="toggle"></label>
     </nav>
 
     <!---- [s]MAIN SWIPER ---->
