--- a/sub_donga.html
+++ b/sub_donga.html
@@ -100,6 +100,7 @@
     </ul>
     <!-- 닫기영역 -->
     <label class="btn_close" for="toggle"></label>
+    <label class="btn_close bg_close" for="toggle"></label>
   </nav>
 
   <!-- FIXED MENU -->
