Add SubPage img

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
         </li>
         <li>
           <h3>
-            ART WORKS
+            DESIGN WORKS
             <span class="material-icons arrow-down">expand_more</span>
           </h3>
           <ul class="sub_nav">
+            <li><a target="_blank" href="javascript:void(0)">WEB DESIGN</a></li>
             <li><a target="_blank" href="javascript:void(0)">GRAPHIC DESIGN</a></li>
-            <li><a target="_blank" href="javascript:void(0)">CARDNEWS</a></li>
-            <li><a target="_blank" href="javascript:void(0)">DESIGN PROJECT</a></li>
             <li><a target="_blank" href="javascript:void(0)">DIGITAL DRAWING</a></li>
+            <li><a target="_blank" href="javascript:void(0)">DESIGN PROJECT</a></li>
           </ul>
         </li>
         <li>
@@ -301,7 +301,7 @@
         </div>
         <!---- [e]SECTION3 ABOUT ME ---->
 
-        <!---- [s]SECTION4 ART WORKS ---->
+        <!---- [s]SECTION4 DESIGN WORKS ---->
         <div class="swiper-slide">
           <section id="artwork">
             <!-- HOME BUTTON -->
@@ -310,7 +310,7 @@
             </h1>
             <div class="wrap_align">
               <div class="menu">
-                <h2 class="title">Art Works</h2>
+                <h2 class="title">Design Works</h2>
                 <h3 class="subtitle">Graphic Design &amp; Digital Drawing</h3>
               </div>
               <ul class="artlist">
