--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
   <meta name="format-detection" content="telephone=no" />
-  <title>Overwatch</title>
-  
+  <title>Web Design</title>
+
   <!-- 오픈 그래프(The Open Graph protocol) -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Jisun's Portfolio" />
@@ -26,6 +26,7 @@
   <link rel="icon" href="./favicon.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- GSAP & ScrollToPlugin -->
@@ -35,12 +36,14 @@
   <!-- ScrollMagic -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <link rel="stylesheet" href="css/sub_layout.css" />
+  <link rel="stylesheet" href="css/sub_layout_design.css" />
+
+  <script src="js/jquery-3.5.0.min.js"></script>
   <script defer src="./js/sub_main.js"></script>
   <script src="js/jquery-3.5.0.min.js"></script>
 </head>
 
-<body id="overwatch_body">
+<body class="webdesign_body">
   <!-- HOME BUTTON -->
   <header>
     <h1 class="myname">
@@ -115,83 +118,43 @@
 
   <div id="menu">
     <ul>
-      <li class="starbucks">
-        <a href="sub_starbucks.html">
+      <li class="web">
+        <a href="sub_webdesign.html">
           <div class="front">
-            <img src="images/starbucks_logo.png" alt="스타벅스 로고" />
+            <img src="images/web_logo.png" alt="웹 디자인 로고" />
           </div>
           <div class="back">
-            <img src="images/starbucks_go.png" alt="스타벅스 바로가기" />
+            <img src="images/web_go.png" alt="웹 디자인 바로가기" />
           </div>
         </a>
       </li>
-      <li class="uriage">
-        <a href="sub_uriage.html">
+      <li class="graphic">
+        <a href="sub_graphic.html">
           <div class="front">
-            <img src="images/uriage_logo.png" alt="유리아쥬 로고" />
+            <img src="images/graphic_logo.png" alt="그래픽 디자인 로고" />
           </div>
           <div class="back">
-            <img src="images/uriage_go.png" alt="유리아쥬 바로가기" />
+            <img src="images/graphic_go.png" alt="그래픽 디자인 바로가기" />
           </div>
         </a>
       </li>
-      <li class="krispykreme">
-        <a href="sub_krispykreme.html">
+      <li class="drawing">
+        <a href="sub_digitaldrawing.html">
           <div class="front">
-            <img src="images/krispykreme_logo.png" alt="크리스피크림 로고" />
+            <img src="images/drawing_logo.png" alt="디지털 드로잉 로고" />
           </div>
           <div class="back">
-            <img src="images/krispykreme_go.png" alt="크리스피크림 바로가기" />
+            <img src="images/drawing_go.png" alt="디지털 드로잉 바로가기" />
           </div>
         </a>
       </li>
-      <li class="yuhan">
-        <a href="sub_yuhan.html">
+      <li class="project">
+        <a href="sub_project.html">
           <div class="front">
-            <img src="images/yuhan_logo.png" alt="유한양행 로고" />
+            <img src="images/project_logo.png" alt="디자인 프로젝트 로고" />
           </div>
           <div class="back">
-            <img src="images/yuhan_go.png" alt="유한양행 바로가기" />
-          </div>
-        </a>
-      </li>
-      <li class="twosome">
-        <a href="sub_twosome.html">
-          <div class="front">
-            <img src="images/twosome_logo.png" alt="투썸 로고" />
-          </div>
-          <div class="back">
-            <img src="images/twosome_go.png" alt="투썸 바로가기" />
-          </div>
-        </a>
-      </li>
-      <li class="donga">
-        <a href="sub_donga.html">
-          <div class="front">
-            <img src="images/donga_logo.png" alt="동아제약 로고" />
-          </div>
-          <div class="back">
-            <img src="images/donga_go.png" alt="동아제약 바로가기" />
-          </div>
-        </a>
-      </li>
-      <li class="dongbu">
-        <a href="sub_dongbu.html">
-          <div class="front">
-            <img src="images/dongbu_logo.png" alt="동부제철 로고" />
-          </div>
-          <div class="back">
-            <img src="images/dongbu_go.png" alt="동부제철 바로가기" />
-          </div>
-        </a>
-      </li>
-      <li class="overwatch">
-        <a href="sub_overwatch.html">
-          <div class="front">
-            <img src="images/overwatch_logo.png" alt="오버워치 로고" />
-          </div>
-          <div class="back">
-            <img src="images/overwatch_go.png" alt="오버워치 바로가기" />
+            <img src="images/project_go.png" alt="디자인 프로젝트 바로가기" />
           </div>
         </a>
       </li>
@@ -201,77 +164,87 @@
   <!-- MAIN SECTION -->
   <div id="main">
     <div class="contentswrap">
-      <div class="bg_wrap">
-        <img src="./images/main_overwatch.png" class="bg_pc" alt="Overwatch" />
-        <img src="./images/main_overwatch_t.png" class="bg_tablet" alt="Overwatch" />
-        <img src="./images/main_overwatch_m.png" class="bg_mobile" alt="Overwatch" />
-      </div>
+      <img src="./images/main_webdesign.png" alt="Web Design" class="floating" />
       <div class="title">
-        <h1 class="logo">Overwatch</h1>
-        <h2>Responsive Web</h2>
-        <p>오버워치</p>
-        <p>반응형 웹사이트 제작</p>
+        <h1 class="logo">WEB DESIGN</h1>
+        <h2>&#35;1 SNS 홍보 카드뉴스 제작</h2>
+        <h3>OVERVIEW</h3>
+        <p>
+          2020년 8월 부터 도입되는 마이데이터 홍보를 
+          위해 기관과 함께 진행한 홍보 프로젝트.
+          마이데이터 정보를 쉽게 전달하기 위해 컨텐츠
+          기획 과정부터 카드뉴스 디자인까지 작업했다.
+        </p>
       </div>
       <ul class="period">
-        <li>제작기간 &#58; 1일</li>
-        <li>참여율 100	&#37;</li>
+        <li>작업일시 &#58; 2020년 7월 &#126; 8월</li>
+        <li>참여율 &#58; 100	&#37;</li>
       </ul>
     </div>
   </div>
-  
-  <!-- [s]CONTENTS -->
-  <div id ="section_wrap">
-    <!-- INTRO SECTION -->
-    <section id="intro" class="scroll-spy">
-      <div class="contentswrap">
-        <h2 class="back-to-position to-bottom delay-0">오버워치 반응형 웹사이트 제작</h2>
-        <ul class="summary">
-          <li class="back-to-position to-bottom delay-1">
-            <h3>WORK</h3>
-            <p>반응형 웹사이트 제작</p>
-          </li>
-          <li class="back-to-position to-bottom delay-2">
-            <h3>RELEASE DATE</h3>
-            <p>2022&#46; 01&#46; 29</p>
-          </li>
-          <li class="back-to-position to-bottom delay-3">
-            <h3>TYPE</h3>
-            <p>RESPONSIVE WEB</p>
-          </li>
-        </ul>
-        <h3 class="back-to-position to-bottom delay-4">OVERVIEW</h3>
-        <p class="back-to-position to-bottom delay-5">
-          OVERWATCH HERO SELECTOR 웹페이지를 제작했다. Pc, Tablet, Mobile 환경에서 사용자가 편리하게 볼 수 있도록 반응형으로 제작했다. 32가지의 히어로를 선택할 수 있는 메인페이지를 제작했다.
-        </p>
-      </div>
-    </section>
-  
-    <!-- MEDIA SECTION -->
-    <section id="media" class="scroll-spy">
-      <div class="contentswrap">
-        <h3 class="back-to-position to-right delay-1">MEDIA QUERY</h3>
-        <ul class="media_query back-to-position to-left delay-1">
-          <li>PC &#58; 1920px &#45; 1400px</li>
-          <li>Tablet &#58; 1399px &#45; 768px</li>
-          <li>Mobile &#58; max 767px</li>
-        </ul>
-        <img src="images/media_overwatch.png" alt="Overwatch mediaquery" class="back-to-position to-right delay-0" />
-        <!-- 바로가기 버튼 -->
-        <ul class="go back-to-position to-left delay-3">
-          <li class="gosite floating"><a target="_blank" href="https://loving-varahamihira-0a6152.netlify.app/">View Website</a></li>
-        </ul>
-      </div>
-    </section>
-  </div>
-  <!-- [f]CONTENTS -->
-  
+    
+  <!-- MOCKUP SECTION -->
+  <section id="cardnews_1">
+    <h3>공모전 홍보 게시글 기획 &amp; 디자인</h3>
+    <ul>
+      <li>
+        <img src="images/cardnews_1_01.png" class="cardnews_1_01" alt="카드뉴스1-공모전 공고" />
+      </li>
+      <li>
+        <img src="images/cardnews_1_02.png" class="cardnews_1_02" alt="카드뉴스1-공모전 공고" />
+      </li>
+    </ul>
+  </section>
+  <section id="cardnews_1_detail">
+    <ul>
+      <li>
+        <img src="images/cardnews_1_03.png" alt="카드뉴스1-공모전 공고" />
+      </li>
+      <li>
+        <img src="images/cardnews_1_04.png" alt="카드뉴스1-공모전 공고" />
+      </li>
+      <li>
+        <img src="images/cardnews_1_05.png" alt="카드뉴스1-공모전 공고" />
+      </li>
+      <li>
+        <img src="images/cardnews_1_06.png" alt="카드뉴스1-공모전 공고" />
+      </li>
+      <li>
+        <img src="images/cardnews_1_07.png" alt="카드뉴스1-공모전 공고" />
+      </li>
+      <li>
+        <img src="images/cardnews_1_08.png" alt="카드뉴스1-공모전 공고" />
+      </li>
+      <li>
+        <img src="images/cardnews_1_09.png" alt="카드뉴스1-공모전 공고" />
+      </li>
+      <li>
+        <img src="images/cardnews_1_10.png" alt="카드뉴스1-공모전 공고" />
+      </li>
+    </ul>
+  </section>
+
+  <section id="mockup_2">
+    <div>
+        <h3>콘텐츠 퀴즈 이벤트 기획 &amp; 디자인</h3>
+    </div>
+    <img src="images/mockup_cardnews_2.png" alt="카드뉴스 목업" />
+  </section>
+
+  <section id="mockup_3">
+    <div>
+        <h3>마이데이터 카드뉴스 디자인</h3>
+    </div>
+    <img src="images/mockup_cardnews_3.png" alt="카드뉴스 목업" />
+  </section>
+    
   <!-- FOOTER -->
   <div class="footer">
     <div id="btntop">
       <a href="#"></a>
     </div>
     <p class="copyright">
-      Copyright(C) ALL RIGHTS RESERVED BY JISUN KIM
+      Copyright 2022 ALL RIGHTS RESERVED BY JISUN KIM
     </p>
   </div>
   
