--- a/sub_krispykreme.html
+++ b/sub_krispykreme.html
@@ -77,14 +77,14 @@
       </li>
       <li>
         <h3>
-          ART WORKS
+          DESIGN WORKS
           <span class="material-icons arrow-down">expand_more</span>
         </h3>
         <ul class="sub_nav">
+          <li><a href="javascript:void(0)">WEB DESIGN</a></li>
           <li><a href="javascript:void(0)">GRAPHIC DESIGN</a></li>
-          <li><a href="javascript:void(0)">CARDNEWS</a></li>
-          <li><a href="javascript:void(0)">DESIGN PROJECT</a></li>
           <li><a href="javascript:void(0)">DIGITAL DRAWING</a></li>
+          <li><a href="javascript:void(0)">DESIGN PROJECT</a></li>
         </ul>
       </li>
     </ul>
