--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <span class="material-icons arrow-down">expand_more</span>
           </h3>
           <ul class="sub_nav">
-            <li><a target="_blank" href="javascript:void(0)">WEB DESIGN</a></li>
+            <li><a target="_blank" href="sub_webdesign.html">WEB DESIGN</a></li>
             <li><a target="_blank" href="javascript:void(0)">GRAPHIC DESIGN</a></li>
             <li><a target="_blank" href="javascript:void(0)">DIGITAL DRAWING</a></li>
             <li><a target="_blank" href="javascript:void(0)">DESIGN PROJECT</a></li>
@@ -315,7 +315,7 @@
               </div>
               <ul class="artlist">
                 <li id="web_design">
-                  <a target="_blank" href="#">
+                  <a target="_blank" href="sub_webdesign.html">
                     <div>
                       <img src="images/cardnews.png" alt="web design" />
                     </div>
