--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -84,7 +84,7 @@
           <span class="material-icons arrow-down">expand_more</span>
         </h3>
         <ul class="sub_nav">
-          <li><a href="javascript:void(0)">WEB DESIGN</a></li>
+          <li><a href="sub_webdesign.html">WEB DESIGN</a></li>
           <li><a href="javascript:void(0)">GRAPHIC DESIGN</a></li>
           <li><a href="javascript:void(0)">DIGITAL DRAWING</a></li>
           <li><a href="javascript:void(0)">DESIGN PROJECT</a></li>
